--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -599,3 +599,17 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Urldate                  = {2014-09-11}
 }
 
+@Article{roediger_highly_2013,
+  Title                    = {{A highly versatile microscope imaging technology platform for the multiplex real-time detection of biomolecules and autoimmune antibodies}},
+  Author                   = {Stefan R{\"o}diger and Peter Schierack and Alexander B{\"o}hm and J{\"o}rg Nitschke and Ingo Berger and Ulrike Fr{\"o}mmel and Carsten Schmidt and Mirko Ruhland and Ingolf Schimke and Dirk Roggenbuck and Werner Lehmann and Christian Schr{\"o}der},
+  Journal                  = {Advances in Biochemical Engineering/Biotechnology},
+  Year                     = {2013},
+  Pages                    = {35--74},
+  Volume                   = {133},
+
+  Abstract                 = {The analysis of different biomolecules is of prime importance for life science research and medical diagnostics. Due to the discovery of new molecules and new emerging bioanalytical problems, there is an ongoing demand for a technology platform that provides a broad range of assays with a user-friendly flexibility and rapid adaptability to new applications. Here we describe a highly versatile microscopy platform, {VideoScan}, for the rapid and simultaneous analysis of various assay formats based on fluorescence microscopic detection. The technological design is equally suitable for assays in solution, microbead-based assays and cell pattern recognition. The multiplex real-time capability for tracking of changes under dynamic heating conditions makes it a useful tool for {PCR} applications and nucleic acid hybridization, enabling kinetic data acquisition impossible to obtain by other technologies using endpoint detection. The paper discusses the technological principle of the platform regarding data acquisition and processing. Microbead-based and solution applications for the detection of diverse biomolecules, including antigens, antibodies, peptides, oligonucleotides and amplicons in small reaction volumes, are presented together with a high-content detection of autoimmune antibodies using a {HEp}-2 cell assay. Its adaptiveness and versatility gives {VideoScan} a competitive edge over other bioanalytical technologies.},
+  ISSN                     = {0724-6145},
+  Keywords                 = {Antibodies; Biological Assay; Computer Systems; Microscopy; Fluorescence; Microspheres; Nucleic Acid Hybridization; Pathology; Molecular; Polymerase chain reaction},
+  Language                 = {eng},
+  //Pmid                     = {22437246}
+}
