--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -611,5 +611,5 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   ISSN                     = {0724-6145},
   Keywords                 = {Antibodies; Biological Assay; Computer Systems; Microscopy; Fluorescence; Microspheres; Nucleic Acid Hybridization; Pathology; Molecular; Polymerase chain reaction},
   Language                 = {eng},
-  //Pmid                     = {22437246}
+  Pmid                     = {22437246}
 }
