--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -358,6 +358,21 @@ Our comprehensive survey showed that most tools use their own file format and on
   Url                      = {http://www.jstatsoft.org/v49/i09}
 }
 
+@Article{roediger_highly_2013,
+  Title                    = {{A highly versatile microscope imaging technology platform for the multiplex real-time detection of biomolecules and autoimmune antibodies}},
+  Author                   = {Stefan R{\"o}diger and Peter Schierack and Alexander B{\"o}hm and J{\"o}rg Nitschke and Ingo Berger and Ulrike Fr{\"o}mmel and Carsten Schmidt and Mirko Ruhland and Ingolf Schimke and Dirk Roggenbuck and Werner Lehmann and Christian Schr{\"o}der},
+  Journal                  = {Advances in Biochemical Engineering/Biotechnology},
+  Year                     = {2013},
+  Pages                    = {35--74},
+  Volume                   = {133},
+
+  Abstract                 = {The analysis of different biomolecules is of prime importance for life science research and medical diagnostics. Due to the discovery of new molecules and new emerging bioanalytical problems, there is an ongoing demand for a technology platform that provides a broad range of assays with a user-friendly flexibility and rapid adaptability to new applications. Here we describe a highly versatile microscopy platform, {VideoScan}, for the rapid and simultaneous analysis of various assay formats based on fluorescence microscopic detection. The technological design is equally suitable for assays in solution, microbead-based assays and cell pattern recognition. The multiplex real-time capability for tracking of changes under dynamic heating conditions makes it a useful tool for {PCR} applications and nucleic acid hybridization, enabling kinetic data acquisition impossible to obtain by other technologies using endpoint detection. The paper discusses the technological principle of the platform regarding data acquisition and processing. Microbead-based and solution applications for the detection of diverse biomolecules, including antigens, antibodies, peptides, oligonucleotides and amplicons in small reaction volumes, are presented together with a high-content detection of autoimmune antibodies using a {HEp}-2 cell assay. Its adaptiveness and versatility gives {VideoScan} a competitive edge over other bioanalytical technologies.},
+  ISSN                     = {0724-6145},
+  Keywords                 = {Antibodies; Biological Assay; Computer Systems; Microscopy; Fluorescence; Microspheres; Nucleic Acid Hybridization; Pathology; Molecular; Polymerase chain reaction},
+  Language                 = {eng},
+  Pmid                     = {22437246}
+}
+
 @Article{roediger_RJ_2013,
   Title                    = {Surface Melting Curve Analysis with {R}},
   Author                   = {Stefan R\"{o}diger and Alexander B\"{o}hm and Ingolf Schimke},
@@ -501,6 +516,23 @@ efficiency, Quantitative {PCR}},
   Shorttitle               = {Amplification efficiency}
 }
 
+@Article{sheikh_2015,
+  Title                    = {Functions of myosin light chain-2 ({MYL}2) in cardiac muscle and disease},
+  Author                   = {Sheikh, Farah and Lyon, Robert C. and Chen, Ju},
+  Journal                  = {Gene},
+  Year                     = {2015},
+  Number                   = {1},
+  Pages                    = {14--20},
+  Volume                   = {569},
+
+  Abstract                 = {Myosin light chain-2 (MYL2, also called MLC-2) is an {\textasciitilde} 19 kDa sarcomeric protein that belongs to the EF-hand calcium binding protein superfamily and exists as three major isoforms encoded by three distinct genes in mammalian striated muscle. Each of the three different MLC-2 genes (MLC-2f; fast twitch skeletal isoform, MLC-2v; cardiac ventricular and slow twitch skeletal isoform, MLC-2a; cardiac atrial isoform) has a distinct developmental expression pattern in mammals. Genetic loss-of-function studies in mice demonstrated an essential role for cardiac isoforms of MLC-2, MLC-2v and MLC-2a, in cardiac contractile function during early embryogenesis. In the adult heart, MLC-2v function is regulated by phosphorylation, which displays a specific 1`expression pattern (high in epicardium and low in endocardium) across the heart. These data along with new data from computational models, genetic mouse models, and human studies have revealed a direct role for MLC-2v phosphorylation in cross-bridge cycling kinetics, calcium-dependent cardiac muscle contraction, cardiac torsion, cardiac function and various cardiac diseases. This review focuses on the regulatory functions of MLC-2 in the embryonic and adult heart, with an emphasis on phosphorylation-driven actions of MLC-2v in adult cardiac muscle, which provide new insights into mechanisms regulating myosin cycling kinetics and human cardiac diseases.},
+  Doi                      = {10.1016/j.gene.2015.06.027},
+  ISSN                     = {0378-1119},
+  Keywords                 = {Cardiac disease, Cardiac function, Cardiac muscle, Cardiac torsion, Contraction, Heart, Myosin light chain-2 (MYL2/MLC-2), Myosin light chain kinase, Phosphorylation, Sarcomere, Ventricular myosin light chain-2},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0378111915007350},
+  Urldate                  = {2015-08-13}
+}
+
 @Article{spiess_impact_2014,
   Title                    = {Impact of Smoothing on Parameter Estimation in Quantitative {DNA} Amplification Experiments},
   Author                   = {Spiess, Andrej-Nikolai and Deutschmann, Claudia and Burdukiewicz, Micha\l{} and Himmelreich, Ralf and Klat, Katharina and Schierack, Peter and R\"{o}diger, Stefan},
@@ -599,17 +631,3 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Urldate                  = {2014-09-11}
 }
 
-@Article{roediger_highly_2013,
-  Title                    = {{A highly versatile microscope imaging technology platform for the multiplex real-time detection of biomolecules and autoimmune antibodies}},
-  Author                   = {Stefan R{\"o}diger and Peter Schierack and Alexander B{\"o}hm and J{\"o}rg Nitschke and Ingo Berger and Ulrike Fr{\"o}mmel and Carsten Schmidt and Mirko Ruhland and Ingolf Schimke and Dirk Roggenbuck and Werner Lehmann and Christian Schr{\"o}der},
-  Journal                  = {Advances in Biochemical Engineering/Biotechnology},
-  Year                     = {2013},
-  Pages                    = {35--74},
-  Volume                   = {133},
-
-  Abstract                 = {The analysis of different biomolecules is of prime importance for life science research and medical diagnostics. Due to the discovery of new molecules and new emerging bioanalytical problems, there is an ongoing demand for a technology platform that provides a broad range of assays with a user-friendly flexibility and rapid adaptability to new applications. Here we describe a highly versatile microscopy platform, {VideoScan}, for the rapid and simultaneous analysis of various assay formats based on fluorescence microscopic detection. The technological design is equally suitable for assays in solution, microbead-based assays and cell pattern recognition. The multiplex real-time capability for tracking of changes under dynamic heating conditions makes it a useful tool for {PCR} applications and nucleic acid hybridization, enabling kinetic data acquisition impossible to obtain by other technologies using endpoint detection. The paper discusses the technological principle of the platform regarding data acquisition and processing. Microbead-based and solution applications for the detection of diverse biomolecules, including antigens, antibodies, peptides, oligonucleotides and amplicons in small reaction volumes, are presented together with a high-content detection of autoimmune antibodies using a {HEp}-2 cell assay. Its adaptiveness and versatility gives {VideoScan} a competitive edge over other bioanalytical technologies.},
-  ISSN                     = {0724-6145},
-  Keywords                 = {Antibodies; Biological Assay; Computer Systems; Microscopy; Fluorescence; Microspheres; Nucleic Acid Hybridization; Pathology; Molecular; Polymerase chain reaction},
-  Language                 = {eng},
-  Pmid                     = {22437246}
-}
