added some information for raw data import

--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -83,6 +83,18 @@ Summary: Following these guidelines will encourage better experimental practice,
   Url                      = {http://CRAN.R-project.org/package=R6}
 }
 
+@Manual{dragulescu_xlsx_2014,
+  Title                    = {xlsx: {Read}, write, format {Excel} 2007 and {Excel} 97/2000/{XP}/2003 files},
+  Author                   = {Dragulescu, Adrian A.},
+  Year                     = {2014},
+
+  Abstract                 = {Provide R functions to read/write/format Excel 2007 and Excel 97/2000/XP/2003 file formats.},
+  Copyright                = {GPL-3},
+  Shorttitle               = {xlsx},
+  Url                      = {https://cran.r-project.org/web/packages/xlsx/index.html},
+  Urldate                  = {2015-08-13}
+}
+
 @Article{Fischer_HDF5,
   Title                    = {{rhdf5}: {HDF5} interface to {R}},
   Author                   = {Bernd Fischer and Gregoire Pau},
@@ -325,6 +337,18 @@ Our comprehensive survey showed that most tools use their own file format and on
   Urldate                  = {2015-04-02}
 }
 
+@Manual{RDCT2010c,
+  Title                    = {{{R} Data {Import/Export}}},
+
+  Address                  = {Vienna, Austria},
+  Author                   = {{{R} Development Core Team}},
+  Note                     = {{ISBN} 3-900051-10-0},
+  Organization             = {{R} Foundation for Statistical Computing},
+  Year                     = {2012},
+
+  Url                      = {http://www.R-project.org/}
+}
+
 @Article{roediger2015r,
   Title                    = {R as an Environment for the Reproducible Analysis of DNA Amplification Experiments},
   Author                   = {R{\"o}diger, Stefan and Burdukiewicz, Micha{\l} and Blagodatskikh, Konstantin and Schierack, Peter},
@@ -410,6 +434,18 @@ http://journal.r-project.org/archive/2013-2/roediger-bohm-schimke.pdf }
   Year                     = {2015},
 
   Url                      = {http://CRAN.R-project.org/package=rlist}
+}
+
+@Manual{ripley_rodbc_2015,
+  Title                    = {{RODBC}: {ODBC} {Database} {Access}},
+  Author                   = {Ripley, Brian and 2002), Michael Lapsley (1999 to Oct},
+  Year                     = {2015},
+
+  Abstract                 = {An ODBC database interface.},
+  Copyright                = {GPL-2 {\textbar} GPL-3},
+  Shorttitle               = {{RODBC}},
+  Url                      = {https://cran.r-project.org/web/packages/RODBC/index.html},
+  Urldate                  = {2015-08-13}
 }
 
 @Article{ritz_qpcr_2008,
@@ -516,6 +552,15 @@ efficiency, Quantitative {PCR}},
   Shorttitle               = {Amplification efficiency}
 }
 
+@Manual{Schutten_2014_ods,
+  Title                    = {readODS: Read ODS files and puts them into data frames},
+  Author                   = {Gerrit-Jan Schutten},
+  Note                     = {R package version 1.4},
+  Year                     = {2014},
+
+  Url                      = {http://CRAN.R-project.org/package=readODS}
+}
+
 @Article{sheikh_2015,
   Title                    = {Functions of myosin light chain-2 ({MYL}2) in cardiac muscle and disease},
   Author                   = {Sheikh, Farah and Lyon, Robert C. and Chen, Ju},
@@ -569,6 +614,33 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Pmid                     = {17485472},
   Url                      = {http://nar.oxfordjournals.org/content/35/suppl_2/W71},
   Urldate                  = {2014-09-11}
+}
+
+@Article{Valero_2012,
+  Title                    = {{Graphical User Interfaces for {R}}},
+  Author                   = {Pedro M. Valero-Mora and Ruben Ledesma},
+  Journal                  = {Journal of Statistical Software},
+  Year                     = {2012},
+  Number                   = {1},
+  Pages                    = {1--8},
+  Volume                   = {49},
+
+  Accepted                 = {2012-06-03},
+  Bibdate                  = {2012-06-03},
+  Coden                    = {JSSOBK},
+  Day                      = {30},
+  ISSN                     = {1548-7660},
+  Submitted                = {2012-06-03},
+  Url                      = {http://www.jstatsoft.org/v49/i01}
+}
+
+@Manual{Warnes_2015_gdata,
+  Title                    = {gdata: Various R Programming Tools for Data Manipulation},
+  Author                   = {Gregory R. Warnes and Ben Bolker and Gregor Gorjanc and Gabor Grothendieck and Ales Korosec and Thomas Lumley and Don MacQueen and Arni Magnusson and Jim Rogers and {others}},
+  Note                     = {R package version 2.17.0},
+  Year                     = {2015},
+
+  Url                      = {http://CRAN.R-project.org/package=gdata}
 }
 
 @Manual{Wickham_tidyr,
