--- a/vignettes/CreateRDML.Rmd
+++ b/vignettes/CreateRDML.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Creating RDML file from VideoScan data"
+title: "Creating RDML file from raw data"
 author: "Konstantin A. Blagodatskikh, Micha&#322; Burdukiewicz, Stefan R&ouml;diger"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Creating RDML file from VideoScan data}
+  %\VignetteIndexEntry{Creating RDML file from raw data}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 
@@ -14,11 +14,18 @@ vignette: >
 knitr::opts_chunk$set(collapse = T, comment = "#>")
 ```
 
-# Creating RDML file from VideoScan data
+# Creating RDML file from raw data
 
-This vignette describes how to create **RDML** object from user provided data and calculate Cq values with custom **RDML** class method.
+This vignette describes how to create **RDML** object from user provided data and calculate Cq values with custom **RDML** class method. Our aim is to a real-world example for the use of the **RDML** package.
 
-For the this purpose we used data from the VideoScan platform. The VideoScan platform is a highly versatile fluorescence microscope based imaging platform for the real-time analysis of biomolecular interactions. VideoScan has been used for DNA melting curve analysis [@roediger_RJ_2013], real-time quantitative PCR [@roediger_highly_2013] and quantitative isothermal amplification [@spiess_impact_2014]. In this example we focus on qPCR data obtained from the amplifification of the human gene *mlc-2v* [@sheikh_2015]. The experimental details (e.g., primer sequences, amplification conditions) are described in [@roediger_highly_2013]. The VideoScan systems has an output as *csv* file (comma separated value). After completion of the experiment all raw data were transfered to the R environment and stored as *rda* files. We will use **C54** data from the [chipPCR](http://cran.r-project.org/web/packages/chipPCR/index.html) package [@roediger2015chippcr] -- a qPCR experiment for the amplification of *MLC-2v* performed using the *VideoScan* heating/cooling-unit. Our aim is to a real-world example for the use of the **RDML** package. This dataset contains three amplification curves collected by three runs. The amplification curves have different number of cycles and one of them contains a missing value due to a sensor dropout. Thus, this data should be preprocessed before Cq calculation.
+For the this purpose we used data from the VideoScan platform. The VideoScan platform is a highly versatile fluorescence microscope based imaging platform for the real-time analysis of biomolecular interactions. VideoScan has been been extended by a heating/cooling-unit, which can be used for DNA melting curve analysis [@roediger_RJ_2013], real-time quantitative PCR [@roediger_highly_2013] and quantitative isothermal amplification [@spiess_impact_2014]. In this example we focus on qPCR data obtained from the amplifification of the human gene *mlc-2v* [@sheikh_2015]. The experimental details (e.g., primer sequences, amplification conditions) are described in [@roediger_highly_2013].
+
+In detail, this dataset contains three amplification curves collected by three runs monitored with TaqMan qPCR chemistry. Similar to other experimental platforms has the VideoScan systems an output as *csv* file (comma separated value). In general, *csv* is format that is sufficient for in hous usage. However, the exchange with other scientists is demanding.
+
+After completion of the experiment all *csv* raw data were transfered to the R environment and stored as *rda* files in the **C54** dataset as described elsewhere [@RDCT2010c]. The R environment provieds numerous packages for the import of standard file formats, including formats from spread sheet applications (e.g., *XLS*, *XLSX*, *ODS*) [@Schutten_2014_ods, @Warnes_2015_gdata, @dragulescu_xlsx_2014], an ODBC connection [@ripley_rodbc_2015] or from the clipboard (`read.table("clipboard")`). There are several graphical user interfaces (GUIs) for R, which faciliate an easy import of raw data [@Valero_2012]. For example **RKWard** [@roediger_rkward_2012] has import functionality for *csv*, *txt*, *spss* and *stata* files.
+
+Thefore, we will use the **C54** dataset directly from the [chipPCR](http://cran.r-project.org/web/packages/chipPCR/index.html) package [@roediger2015chippcr]. The amplification curves have different number of cycles and one of them contains a missing value due to a sensor dropout. Thus, this data should be preprocessed before Cq calculation.
+
 
 ## Initialization
 
@@ -308,3 +315,7 @@ To save our **RDML** object as file we can use `$AsXML()` method with file name 
 `video.scan$AsXML("filename.RDML")`
 
 *Note that currently due to limits of `XML` package it is rather slow operation!!!*
+
+## Conclusion
+
+In this example we used raw data from the VideoScan platform to demonstrate the creation of an *RDML* file via the **RDML** package. This procedure can be easily adapted to other experiements and gives the reasearcher a tool to create a data file for convenient data exchange. In contrast to simple *csv* files contains this file metat data in a defiened structure. This in turn makes the data available to other scientists for reproducible research.
